--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
